apply jwt auth to api
