# api/docs/swagger.json
@@ -732,14 +732,10 @@
         "handler.CreatePostRequest": {
             "type": "object",
             "required": [
-                "author_id",
                 "content",
                 "title"
             ],
             "properties": {
-                "author_id": {
-                    "type": "integer"
-                },
                 "content": {
                     "type": "string"
                 },
